--- a/erudio-client-android/res/layout/login.xml
+++ b/erudio-client-android/res/layout/login.xml
@@ -1,84 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
-  android:fillViewport="true">
-  <RelativeLayout 
-  		android:layout_width="fill_parent"
-  		android:layout_height="wrap_content" android:background="#ffffff">
-  		
-  		<!--  Header  Starts-->
-  		<LinearLayout android:id="@+id/header"
-  				android:layout_width="fill_parent"
-  				android:layout_height="wrap_content"
-  				android:background="@layout/header_gradient" 
-  				android:paddingTop="5dip"
-  				android:paddingBottom="5dip">
-  				<!-- Logo Start-->
-  				<ImageView android:src="@drawable/logo"
-  							android:layout_width="wrap_content"
-  							android:layout_height="wrap_content"
-  							android:layout_marginLeft="10dip"/>
-  				<!-- Logo Ends -->
-  		</LinearLayout>
-  		<!--  Header Ends -->  
-  		<!-- Footer Start -->
-  		<LinearLayout android:id="@+id/footer"
-  				android:layout_width="fill_parent"
-  				android:layout_height="90dip"
-  				android:background="@layout/footer_repeat"
-  				android:layout_alignParentBottom="true">
-  		</LinearLayout>
-  		<!-- Footer Ends -->
-  		
-  		<!-- Login Form -->
-		<LinearLayout
-		  xmlns:android="http://schemas.android.com/apk/res/android"
-		  android:orientation="vertical"
-		  android:layout_width="match_parent"
-		  android:layout_height="wrap_content"
-		  android:padding="10dip"
-		  android:layout_below="@id/header">
-		  <!--  Email Label -->
-		  <TextView android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:textColor="#372c24"
-		  		android:text="Email"/>
-		  <EditText android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:layout_marginTop="5dip"
-		  		android:layout_marginBottom="20dip"
-		  		android:singleLine="true"/>
-		  <!--  Password Label -->
-		  <TextView android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:textColor="#372c24"
-		  		android:text="Password"/>
-		  <EditText android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:layout_marginTop="5dip"
-		  		android:singleLine="true"
-		  		android:password="true"/>
-		  <!-- Login button -->	
-		  <Button android:id="@+id/btnLogin" 
-		  		android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:layout_marginTop="10dip"
-		  		android:text="Login"/>
-		  <!-- Link to Registration Screen -->		
-		  <TextView android:id="@+id/link_to_register" 
-		  		android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:layout_marginTop="40dip"
-		  		android:layout_marginBottom="40dip"
-		  		android:text="Informe seu Login e Senha"
-		  		android:gravity="center"
-		  		android:textSize="20dip"
-		  		android:textColor="#0b84aa"/>
-		    
-		</LinearLayout>
-  		<!-- Login Form Ends --> 		
-  		
-  </RelativeLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true" >
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff" >
+
+        <!-- Início do Cabeçalho -->
+
+        <LinearLayout
+            android:id="@+id/header"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@layout/header_gradient"
+            android:paddingBottom="5dip"
+            android:paddingTop="5dip" >
+
+            <!-- Início do Logo -->
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:src="@drawable/logo" />
+            <!-- Final do Logo -->
+        </LinearLayout>
+        <!-- Final do Cabeçalho -->
+        
+        <!-- Início do Rodapé -->
+
+        <LinearLayout
+            android:id="@+id/footer"
+            android:layout_width="fill_parent"
+            android:layout_height="90dip"
+            android:layout_alignParentBottom="true"
+            android:background="@layout/footer_repeat" >
+        </LinearLayout>
+        <!-- Final do Rodapé -->
+
+
+        <!-- Início do Formulário de Login -->
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header"
+            android:orientation="vertical"
+            android:padding="10dip" >
+
+            <!-- Rótulo de Login -->
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Usuário"
+                android:textColor="#372c24" />
+
+            <EditText
+                android:id="@+id/inputUserName" 
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dip"
+                android:layout_marginTop="5dip"
+                android:singleLine="true" />
+            <!-- Rótulo de Senha -->
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Senha"
+                android:textColor="#372c24" />
+
+            <EditText
+                android:id="@+id/inputPasword" 
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dip"
+                android:password="true"
+                android:singleLine="true" />
+            <!-- Botão de Login -->
+
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:text="Acessar" />
+            <!-- Link para a tela de registro -->
+
+            <TextView
+                android:id="@+id/link_to_register"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dip"
+                android:layout_marginTop="40dip"
+                android:gravity="center"
+                android:text="Informe seu Login e Senha"
+                android:textColor="#0E75C4"
+                android:textSize="20dip" />
+        </LinearLayout>
+        <!-- Fim do Formulário de Login -->
+
+    </RelativeLayout>
+
 </ScrollView>
